Linked css sheet to Index.html

--- a/index.html
+++ b/index.html
@@ -26,13 +26,14 @@
              support bookmarking. -->
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
         <link rel="favicon" href="favicon.ico">
-
+        <link href="main.css" rel="stylesheet">
     </head>
     <body>
         <!-- Note: If you do not see a camera icon in the heading below
              when you view this file in a web browser, then there is an issue
              with how FontAwesome is linked to this page. -->
         <h1><span class="fas fa-camera-retro"></span> Hello World!</h1>
+        
         <!-- TODO: Populate this page with all the content you deem
              necessary to create a compelling product page! -->
 
