updated the contact info

--- a/index.html
+++ b/index.html
@@ -165,9 +165,9 @@
             <div class="card py-4 h-100">
               <div class="card-body text-center">
                 <i class="fas fa-map-marked-alt text-primary mb-2"></i>
-                <h4 class="text-uppercase m-0">Address</h4>
+                <h4 class="text-uppercase m-0">Visit Us</h4>
                 <hr class="my-4">
-                <div class="small text-black-50">4923 Market Street, Orlando FL</div>
+                <div class="small text-black-50">1234 Main Street, Seattle Wa</div>
               </div>
             </div>
           </div>
@@ -176,10 +176,10 @@
             <div class="card py-4 h-100">
               <div class="card-body text-center">
                 <i class="fas fa-envelope text-primary mb-2"></i>
-                <h4 class="text-uppercase m-0">Email</h4>
+                <h4 class="text-uppercase m-0">Email Us</h4>
                 <hr class="my-4">
                 <div class="small text-black-50">
-                  <a href="#">hello@yourdomain.com</a>
+                  <a href="#">info@apisuperstore.com</a>
                 </div>
               </div>
             </div>
@@ -189,9 +189,9 @@
             <div class="card py-4 h-100">
               <div class="card-body text-center">
                 <i class="fas fa-mobile-alt text-primary mb-2"></i>
-                <h4 class="text-uppercase m-0">Phone</h4>
+                <h4 class="text-uppercase m-0">Call Us</h4>
                 <hr class="my-4">
-                <div class="small text-black-50">+1 (555) 902-8832</div>
+                <div class="small text-black-50">+1 (206) 555-1234</div>
               </div>
             </div>
           </div>
