--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
               <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
           </div>
         </div>
-        <img src="design/img/coder-laptop-small.jpg" class="img-fluid" alt="">
+         <iframe src="https://www.youtube.com/embed/L48g1ZWLMdo"></iframe>
+        <!--preserving old code <img src="design/img/coder-laptop-small.jpg" class="img-fluid" alt="">-->
       </div>
     </section>
 
