--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
               <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
           </div>
         </div>
-         <iframe src="https://www.youtube.com/embed/L48g1ZWLMdo"></iframe>
+         <iframe width="500" height="315" src="https://www.youtube.com/embed/L48g1ZWLMdo"></iframe>
         <!--preserving old code <img src="design/img/coder-laptop-small.jpg" class="img-fluid" alt="">-->
       </div>
     </section>
@@ -88,7 +88,8 @@
         <!-- Featured Project Row -->
         <div class="row align-items-center no-gutters mb-4 mb-lg-5">
           <div class="col-xl-8 col-lg-7">
-            <img class="img-fluid mb-3 mb-lg-0" src="design/img/coder-laptop-small.jpg" alt="">
+           <iframe width="500" height="315" src="https://www.youtube.com/embed/L48g1ZWLMdo"></iframe>
+            <!--preserving old code<img class="img-fluid mb-3 mb-lg-0" src="design/img/coder-laptop-small.jpg" alt="">-->
           </div>
           <div class="col-xl-4 col-lg-5">
             <div class="featured-text text-center text-lg-left">
