Updated features and testimonials

--- a/index.html
+++ b/index.html
@@ -108,8 +108,15 @@
             <div class="bg-black text-center h-100 project">
               <div class="d-flex h-100">
                 <div class="project-text w-100 my-auto text-center text-lg-left">
-                  <h4 class="text-white">Misty</h4>
-                  <p class="mb-0 text-white-50">An example of where you can put an image of a project, or anything else, along with a description.</p>
+                  <h4 class="text-white">Features</h4>
+                  <p class="mb-0 text-white-50">
+                  <ul>
+                  <li>Links to best APIs from all over the web</li>
+                 <li>Pay with credit, check, IOU, wire transfer, Paypal or livestock trade</li>
+                <li>Convenient catalog</li>
+                <li>Elegant shopping experience</li>
+                </ul>
+                </p>
                   <hr class="d-none d-lg-block mb-0 ml-0">
                 </div>
               </div>
@@ -126,8 +133,12 @@
             <div class="bg-black text-center h-100 project">
               <div class="d-flex h-100">
                 <div class="project-text w-100 my-auto text-center text-lg-right">
-                  <h4 class="text-white">Mountains</h4>
-                  <p class="mb-0 text-white-50">Another example of a project with its respective description. These sections work well responsively as well, try this theme on a small screen!</p>
+                  <h4 class="text-white">Testimonials </h4>
+                  <p class="mb-0 text-white-50">
+                  <ul>
+                  <li>“This is the best website ever!” --C.P. Yu, Amazingsite.com</li>
+                <li>“Once again, I’m blown away by the amazing offerings of the API Superstore. You really are SUPER” --Clara Cache</li>
+                    </ul></p>
                   <hr class="d-none d-lg-block mb-0 mr-0">
                 </div>
               </div>
