--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto">
-            <h2 class="text-white mb-4">Built with Bootstrap 4</h2>
-            <p class="text-white-50">Grayscale is a free Bootstrap theme created by Start Bootstrap. It can be yours right now, simply download the template on
+            <h2 class="text-white mb-4">What We Do</h2>
+            <p class="text-white-50">The API Superstore has partnered with API providers across the Web to bring you easy access to the hottest third-party services and features. 
               <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
           </div>
         </div>
@@ -88,8 +88,7 @@
         <!-- Featured Project Row -->
         <div class="row align-items-center no-gutters mb-4 mb-lg-5">
           <div class="col-xl-8 col-lg-7">
-           <iframe width="500" height="315" src="https://www.youtube.com/embed/L48g1ZWLMdo"></iframe>
-            <!--preserving old code<img class="img-fluid mb-3 mb-lg-0" src="design/img/coder-laptop-small.jpg" alt="">-->
+        <img class="img-fluid mb-3 mb-lg-0" src="design/img/coder-laptop-small.jpg" alt="">
           </div>
           <div class="col-xl-4 col-lg-5">
             <div class="featured-text text-center text-lg-left">
