--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <!-- Project One Row -->
         <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
           <div class="col-lg-6">
-            <img class="img-fluid" src="design/img/coder-laptop-small.jpg" alt="">
+            <img class="img-fluid" src="design/img/code-small.jpg" alt="">
           </div>
           <div class="col-lg-6">
             <div class="bg-black text-center h-100 project">
@@ -126,7 +126,7 @@
         <!-- Project Two Row -->
         <div class="row justify-content-center no-gutters">
           <div class="col-lg-6">
-            <img class="img-fluid" src="design/img/coder-laptop-small.jpg" alt="">
+            <img class="img-fluid" src="design/img/team-work-small.jpg" alt="">
           </div>
           <div class="col-lg-6 order-lg-first">
             <div class="bg-black text-center h-100 project">
