styling and adding copy

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+ <!doctype html>
 <html>
     <head>
         <meta charset="utf-8">
@@ -45,7 +45,7 @@
               <a class="nav-link js-scroll-trigger" href="#about">About</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link js-scroll-trigger" href="#projects">Projects</a>
+              <a class="nav-link js-scroll-trigger" href="#projects">How it Works</a>
             </li>
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#signup">Contact</a>
@@ -73,7 +73,7 @@
           <div class="col-lg-8 mx-auto">
             <h2 class="text-white mb-4">What We Do</h2>
             <p class="text-white-50">The API Superstore has partnered with API providers across the Web to bring you easy access to the hottest third-party services and features. 
-              <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
+              <a href="http://APISuperstore.com">Sign up</a> today!</p>
           </div>
         </div>
          <iframe width="500" height="315" src="https://www.youtube.com/embed/L48g1ZWLMdo"></iframe>
@@ -92,8 +92,13 @@
           </div>
           <div class="col-xl-4 col-lg-5">
             <div class="featured-text text-center text-lg-left">
-              <h4>Shoreline</h4>
-              <p class="text-black-50 mb-0">Grayscale is open source and MIT licensed. This means you can use it for any project - even commercial projects! Download it, customize it, and publish your website!</p>
+              <h4>How it Works</h4>
+              <p class="text-black-50 mb-0"><!-->add styling to add line spaces between br-->
+              The API Superstore provides a catalog of third­-party APIs that you can use to enhance your business.<br> 
+              From e­commerce to maps, API Superstore lists all of the services that customers expect and saves you the headache
+              of sorting it out yourself!<br>
+             The longer you wait, the longer you’re not making more money and happier users!<br>
+            </p>
             </div>
           </div>
         </div>
@@ -137,6 +142,7 @@
                   <ul>
                   <li>“This is the best website ever!” --C.P. Yu, Amazingsite.com</li>
                 <li>“Once again, I’m blown away by the amazing offerings of the API Superstore. You really are SUPER” --Clara Cache</li>
+                <li>"Please dont stop the rocking!" --Amy Zon, Massive Anonymous Customer</li>
                     </ul></p>
                   <hr class="d-none d-lg-block mb-0 mr-0">
                 </div>
