updated some css for ul

--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
     <header class="masthead">
       <div class="container d-flex h-100 align-items-center">
         <div class="mx-auto text-center">
-          <h1 class="mx-auto my-0 text-uppercase">Grayscale</h1>
-          <h2 class="text-white-50 mx-auto mt-2 mb-5">A free, responsive, one page Bootstrap theme created by Start Bootstrap.</h2>
-          <a href="#about" class="btn btn-primary js-scroll-trigger">Get Started</a>
+          <h1 class="mx-auto my-0 text-uppercase">API Superstore</h1>
+          <h2 class="text-white-50 mx-auto mt-2 mb-5">We have partnered with API providers to bring you easy access to the hottest 3rd party services and features.</h2>
+          <a href="#about" class="btn btn-primary js-scroll-trigger">Work With Us</a>
         </div>
       </div>
     </header>
@@ -72,7 +72,7 @@
         <div class="row">
           <div class="col-lg-8 mx-auto">
             <h2 class="text-white mb-4">What We Do</h2>
-            <p class="text-white-50">The API Superstore has partnered with API providers across the Web to bring you easy access to the hottest third-party services and features. 
+            <p class="text-white-50">Confused? Check out the video below!
               <a href="http://APISuperstore.com">Sign up</a> today!</p>
           </div>
         </div>
@@ -84,7 +84,6 @@
     <!-- Projects Section -->
     <section id="projects" class="projects-section bg-light">
       <div class="container">
-
         <!-- Featured Project Row -->
         <div class="row align-items-center no-gutters mb-4 mb-lg-5">
           <div class="col-xl-8 col-lg-7">
@@ -93,7 +92,7 @@
           <div class="col-xl-4 col-lg-5">
             <div class="featured-text text-center text-lg-left">
               <h4>How it Works</h4>
-              <p class="text-black-50 mb-0"><!-->add styling to add line spaces between br-->
+              <p class="text-black-50 mb-0"> <!--add styling to add line spaces between br-->
               The API Superstore provides a catalog of third­-party APIs that you can use to enhance your business.<br> 
               From e­commerce to maps, API Superstore lists all of the services that customers expect and saves you the headache
               of sorting it out yourself!<br>
@@ -161,11 +160,11 @@
           <div class="col-md-10 col-lg-8 mx-auto text-center">
 
             <i class="far fa-paper-plane fa-2x mb-2 text-white"></i>
-            <h2 class="text-white mb-5">Subscribe to receive updates!</h2>
+            <h2 class="text-white mb-5">Join Our Mailing List!</h2>
 
             <form class="form-inline d-flex">
               <input type="email" class="form-control flex-fill mr-0 mr-sm-2 mb-3 mb-sm-0" id="inputEmail" placeholder="Enter email address...">
-              <button type="submit" class="btn btn-primary mx-auto">Subscribe</button>
+              <button type="submit" class="btn btn-primary mx-auto">Send me info!</button>
             </form>
 
           </div>
@@ -233,7 +232,7 @@
     <!-- Footer -->
     <footer class="bg-black small text-center text-white-50">
       <div class="container">
-        Copyright &copy; Your Website 2018
+        Copyright &copy; Nate Meinhold 2018
       </div>
     </footer>
 
