--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                 <div class="project-text w-100 my-auto text-center text-lg-left">
                   <h4 class="text-white">Features</h4>
                   <p class="mb-0 text-white-50">
-                  <ul>
+                  <ul class="features">
                   <li>Links to best APIs from all over the web</li>
                  <li>Pay with credit, check, IOU, wire transfer, Paypal or livestock trade</li>
                 <li>Convenient catalog</li>
@@ -138,7 +138,7 @@
                 <div class="project-text w-100 my-auto text-center text-lg-right">
                   <h4 class="text-white">Testimonials </h4>
                   <p class="mb-0 text-white-50">
-                  <ul>
+                  <ul class="testimonials">
                   <li>“This is the best website ever!” --C.P. Yu, Amazingsite.com</li>
                 <li>“Once again, I’m blown away by the amazing offerings of the API Superstore. You really are SUPER” --Clara Cache</li>
                 <li>"Please dont stop the rocking!" --Amy Zon, Massive Anonymous Customer</li>
