got the em dash to work

--- a/index.html
+++ b/index.html
@@ -139,9 +139,9 @@
                   <h4 class="text-white">Testimonials </h4>
                   <p class="mb-0 text-white-50">
                   <ul class="testimonials">
-                  <li>“This is the best website ever!” --C.P. Yu, Amazingsite.com</li>
-                <li>“Once again, I’m blown away by the amazing offerings of the API Superstore. You really are SUPER” --Clara Cache</li>
-                <li>"Please dont stop the rocking!" --Amy Zon, Massive Anonymous Customer</li>
+                  <li>“This is the best website ever!”&#8212C.P. Yu, Amazingsite.com</li>
+                <li>“Once again, I’m blown away by the amazing offerings of the API Superstore. You really are SUPER”&#8212       Clara Cache</li>
+                <li>"Please dont stop the rocking!"&#8212Amy Zon, Massive Anonymous Customer</li>
                     </ul></p>
                   <hr class="d-none d-lg-block mb-0 mr-0">
                 </div>
