--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <!--1<link rel="favicon" href="favicon.ico">-->
         <link href="main.css" rel="stylesheet">
         <link rel="icon" type="image/png" href="favicon-96x96.png">
-        
+        <!-->pick one favicon size and make it work
         <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
 <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
