cleaned up the code..need to go all out on favicon

--- a/index.html
+++ b/index.html
@@ -26,10 +26,13 @@
              support bookmarking. -->
        <!--> <link rel="apple-touch-icon" href="apple-touch-icon.png">-->
         <!--1<link rel="favicon" href="favicon.ico">-->
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+        <link rel="icon" href="favicon.ico" type="image/x-icon">
         <link href="main.css" rel="stylesheet">
-        <link rel="icon" type="image/png" href="favicon-96x96.png">
-        <!-->pick one favicon size and make it work
-        <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+       <!--  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+        <link rel="icon" href="favicon.ico" type="image/x-icon"> -->
+
+<link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
 <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
 <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
@@ -96,7 +99,6 @@
           </div>
         </div>
          <iframe width="500" height="315" src="https://www.youtube.com/embed/L48g1ZWLMdo"></iframe>
-        <!--preserving old code <img src="design/img/coder-laptop-small.jpg" class="img-fluid" alt="">-->
       </div>
     </section>
 
@@ -266,28 +268,8 @@
     <script src="js/grayscale.min.js"></script>
         <!-- Note: If you do not see a camera icon in the heading below
              when you view this file in a web browser, then there is an issue
-             with how FontAwesome is linked to this page. -->
-        <h1><span class="fas fa-camera-retro"></span></h1>
-        
-        <!-- TODO: Populate this page with all the content you deem
-             necessary to create a compelling product page! -->
-
-        <!-- TODO: Create an area to put the explainer video. -->
-
-        <!-- TODO: Create an area to put the long product description. -->
-
-        <!-- TODO: Create an area to put customer testimonials. -->
-
-        <!-- TODO: Create an area to show features. -->
-
-        <!-- TODO: Create an area to show company contact info (phone,
-             location, etc.) -->
-
-        <!-- TODO: Create an area that allows users to Share links to the
-             page. -->
-
-        <!-- TODO: Create a call to action link to get users to sign up for the
-             service. -->
+             with how FontAwesome is linked to this page. 
+        <h1><span class="fas fa-camera-retro"></span></h1> leaving camera code to allow easy self-check-->
 
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
