cleaned up the code, might need to ask for help...favicon still not working . Everything else pretty much set for week 2 turn in

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- TODO: Add proper head tag to provide a page description for search
-             engines. -->
+        <meta name="description" content="API Superstore">
+        <meta name="keywords" content="API's, API, Superstore">
+        <meta name="author" content="Nate Meinhold">
         <title>API Superstore</title>
         <!-- Bootstrap CSS Framework -->
         <!-- You can remove the ``link`` tags below if you don't want to use
@@ -26,12 +27,21 @@
              support bookmarking. -->
        <!--> <link rel="apple-touch-icon" href="apple-touch-icon.png">-->
         <!--1<link rel="favicon" href="favicon.ico">-->
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-        <link rel="icon" href="favicon.ico" type="image/x-icon">
+   
         <link href="main.css" rel="stylesheet">
-       <!--  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
-        <link rel="icon" href="favicon.ico" type="image/x-icon"> -->
+        
+        <!--tried the way that has worked before-->
+        <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+        <link rel="icon" href="favicon.ico" type="image/x-icon">
+        <!-- tried with favicon in img file (renamed "favicon.ico" to "light.ico" to separate them)-->
+        <link rel="shortcut icon" href="design/img/light.ico" type="image/x-icon">
+        <link rel="icon" href="design/img/light.ico" type="image/x-icon">
+        <!-- tried with the png from w3 https://www.w3.org/2005/10/howto-favicon  (code matches line 56-->
+        <link rel="shortcut icon" 
+        type="image/png" 
+         href="favicon-96x96.png">
 
+<!--These are the alternate tiles codes...don't really need for this project, didn't want to deleting in case I can get it to work.
 <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
 <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
@@ -48,7 +58,7 @@
 <link rel="manifest" href="/manifest.json">
 <meta name="msapplication-TileColor" content="#ffffff">
 <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
-<meta name="theme-color" content="#ffffff">
+<meta name="theme-color" content="#ffffff">-->
         
     </head>
      <body id="page-top">
