--- a/index.html
+++ b/index.html
@@ -23,10 +23,7 @@
         <!-- FontAwesome (https://fontawesome.com/how-to-use/svg-with-js#basic-use) -->
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" integrity="sha384-DNOHZ68U8hZfKXOrtjWvjxusGo9WQnrNx2sqG0tfsghAvtVlRW3tvkXWZh58N9jp" crossorigin="anonymous">
 
-        <!-- TODO: replace favicon, apple-touch-icon, and tile images to best
-             support bookmarking. -->
-
-   
+        <!-- I ended up creating a new "testing enviroment out of a new project to play with the favicon to get it to work" -->
         <link href="main.css" rel="stylesheet">
         <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
         <link rel="icon" href="/favicon.ico" type="image/x-icon">
