added reference and some extra code

--- a/index.html
+++ b/index.html
@@ -231,7 +231,8 @@
     <!-- Footer -->
     <footer class="bg-black small text-center text-white-50">
       <div class="container">
-        Copyright &copy; Nate Meinhold 2018
+        Copyright &copy; Nate Meinhold 2018<br>Made possible with Bootstrap<br>
+        And Seattle University's Web Development Program
       </div>
     </footer>
 
@@ -253,4 +254,5 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
     </body>
+    Made possible with Bootstrap.com 
 </html>
