amended styles and added hover effect to nav bar.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <meta name="description" content="API Superstore">
         <meta name="keywords" content="API's, API, Superstore">
         <meta name="author" content="Nate Meinhold">
+        
         <title>API Superstore</title>
         <!-- Bootstrap CSS Framework -->
         <!-- You can remove the ``link`` tags below if you don't want to use
@@ -66,7 +67,7 @@
       </div>
     </header>
 
-    <!-- About Section -->
+    <!-- Video Section -->
     <section id="about" class="about-section text-center">
       <div class="container">
         <div class="row">
@@ -80,7 +81,7 @@
       </div>
     </section>
 
-    <!-- Projects Section -->
+    <!-- How it Works Section -->
     <section id="projects" class="projects-section bg-light">
       <div class="container">
         <!-- Featured Project Row -->
@@ -101,7 +102,7 @@
           </div>
         </div>
 
-        <!-- Project One Row -->
+        <!-- Features Row -->
         <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
           <div class="col-lg-6">
             <img class="img-fluid" src="design/img/code-small.jpg" alt="">
@@ -126,7 +127,7 @@
           </div>
         </div>
 
-        <!-- Project Two Row -->
+        <!-- Testimoninials Row -->
         <div class="row justify-content-center no-gutters">
           <div class="col-lg-6">
             <img class="img-fluid" src="design/img/motherboard-small.jpg" alt="">
@@ -139,7 +140,7 @@
                   <p class="mb-0 text-white-50">
                   <ul class="testimonials">
                   <li>“This is the best website ever!”&#8212C.P. Yu, Amazingsite.com</li>
-                <li>“Once again, I’m blown away by the amazing offerings of the API Superstore. You really are SUPER”&#8212       Clara Cache</li>
+                <li>“Once again, I’m blown away by the amazing offerings of the API Superstore. You really are SUPER”&#8212Clara Cache</li>
                 <li>"Please dont stop the rocking!"&#8212Amy Zon, Massive Anonymous Customer</li>
                     </ul></p>
                   <hr class="d-none d-lg-block mb-0 mr-0">
@@ -254,5 +255,5 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
     </body>
-    Made possible with Bootstrap.com 
-</html>
+    </html>
+  
