cleaned up index.html and css sheets

--- a/Testing Enviroment.html
+++ b/Testing Enviroment.html
@@ -79,6 +79,9 @@
               <a href="http://APISuperstore.com">Sign up</a> today!</p>
           </div>
         </div>
+        <div class="embed-responsive embed-responsive-16by9">
+  <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/L48g1ZWLMdo" allowfullscreen></iframe>
+</div>
          <iframe width="500" height="315" src="https://www.youtube.com/embed/L48g1ZWLMdo"></iframe>
       </div>
     </section>
