--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <div class="col-xl-4 col-lg-5">
             <div class="featured-text text-center text-lg-left">
               <h4>How it Works</h4>
-              <p class="text-black-50 mb-0"> <!--add styling to add line spaces between br-->
+              <p class="text-black-50 mb-0"> 
               The API Superstore provides a catalog of third­-party APIs that you can use to enhance your business.<br> 
               From e­commerce to maps, API Superstore lists all of the services that customers expect and saves you the headache
               of sorting it out yourself!<br>
@@ -132,7 +132,7 @@
                   <p class="mb-0 text-white-50">
                   <ul class="testimonials">
                   <li>“This is the best website ever!”&#8212C.P. Yu, Amazingsite.com</li>
-                <li>“Once again, I’m blown away by the amazing offerings of the API Superstore. You really are SUPER”&#8212Clara Cache</li>
+                <li>“Once again, I’m blown away by the amazing offerings of the API Superstore. You really are SUPER”&#8212Clara       Cache</li>
                 <li>"Please dont stop the rocking!"&#8212Amy Zon, Massive Anonymous Customer</li>
                     </ul></p>
                   <hr class="d-none d-lg-block mb-0 mr-0">
