--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
           </div>
         </div>
          <iframe width="500" height="315" src="https://www.youtube.com/embed/L48g1ZWLMdo"></iframe>
+         
       </div>
     </section>
 
@@ -224,7 +225,7 @@
     <!-- Footer -->
     <footer class="bg-black small text-center text-white-50">
       <div class="container">
-        Copyright &copy; Nate Meinhold 2018<br>Made possible with Bootstrap<br>
+        Copyright &copy; Nate Meinhold 2018<br>Made Possible with Bootstrap<br>
         And Seattle University's Web Development Program
       </div>
     </footer>
