--- a/Testing Enviroment.html
+++ b/Testing Enviroment.html
@@ -32,10 +32,32 @@
         <link rel="icon" href="/favicon.ico" type="image/x-icon">
         
     </head>
-     <body id="page-top">
-
+    
+     <body id="page-top" data-spy="scroll" data-target=".navbar" data-offset="50">
     <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+     <nav class="navbar navbar-expand-lg navbar-dark navbar-custom fixed-top">
+      <div class="container">
+        <a class="navbar-brand" href="#home">Home</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="#about">About</a>
+            </li>
+            <li class="nav-item">
+            <a class="nav-link" href="#projects">How it Works</a>
+             <li class="nav-item">
+              <a class="nav-link" href="#features">Features</a>
+             <li class="nav-item">
+              <a class="nav-link" href="#signup">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <!--<nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
         <a class="navbar-brand js-scroll-trigger" href="#page-top"></a>
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -43,7 +65,7 @@
           <i class="fas fa-bars"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
+          <ul class="navbar-nav ml-auto" id="scroll">
             <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#about">About</a>
             </li>
@@ -56,7 +78,7 @@
           </ul>
         </div>
       </div>
-    </nav>
+    </nav>-->
 
     <!-- Header -->
     <header class="masthead">
@@ -108,7 +130,7 @@
         </div>
 
         <!-- Project One Row -->
-        <div class="row justify-content-center no-gutters mb-5 mb-lg-0">
+        <div class="row justify-content-center no-gutters mb-5 mb-lg-0" id="features">
           <div class="col-lg-6">
             <img class="img-fluid" src="design/img/code-small.jpg" alt="">
           </div>
