--- a/index.html
+++ b/index.html
@@ -39,8 +39,10 @@
             <a class="nav-link" href="#projects">How it Works</a>
              <li class="nav-item">
               <a class="nav-link" href="#features">Features</a>
+              <li class="nav-item">
+              <a class="nav-link" href="#signup">Mailing</a>
              <li class="nav-item">
-              <a class="nav-link" href="#signup">Contact</a>
+              <a class="nav-link" href="#contact">Contact</a>
             </li>
           </ul>
         </div>
@@ -165,7 +167,7 @@
     </section>
 
     <!-- Contact Section -->
-    <section class="contact-section bg-black">
+    <section class="contact-section bg-black" id="contact">
       <div class="container">
 
         <div class="row">
